Version: 0.4.5
Date: ????
  Changes:
    - Doubled the Tungsten carbide powder mixture output from 12 to 24 units, of the second tier of Tungsten cvarbide powder mixture recipe, and increased the processing time from 8 to 16 seconds to bring it into line with the first and third tier recipes; also added tier numerals
    - Adjusted the recipe sort order for the third tier of Tungsten powder smelting, added tier numeral
  Bugfixes:
    - Fixed that the recipe for Zinc powder did not have ingredients; it is now properly crafted from 1 zinc ingot
---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: 2021-03-26
  Bugfixes:
    - Fixed that structures were not returning the correct item when deconstructed
  Locale:
    - Fixed several typos
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 2021-03-23
  Features:
    - Added the setting "Legacy inventory sizes" to enable legacy inventory slot counts for warehouses
    - Now dependent on Factorio Library
  Changes:
    - Adjusted the check for Angel's component mode to use the Angel's component mode trigger
    - Adjusted the warehouse inventory size defaults for performance reasons; new defaults correspond to a 15%, 30%, and 45% increase for each tier over the defaults from Angel's Addons - Storage Options, down from 147%, 340%, 532%, and 725%
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 2021-03-21
  Bugfixes:
    - Fixed startup error when no Angel's Addons mods are present.
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2021-03-21
  Bugfixes:
    - Fixed startup errors related to disabling warehouses while using Angel's Addons - Storage Options