@@ -9,5 +9,6 @@ require("prototypes.overrides.bioprocessing")
 require("prototypes.overrides.next-upgrades")
 require("prototypes.overrides.petrochem")
 require("prototypes.overrides.recipes")
+require("prototypes.overrides.smelting")
 require("prototypes.overrides.technology")
 require("prototypes.overrides.warehouses")
