@@ -81,7 +81,7 @@ data:extend({
         icon = "__extendedangels__/graphics/icons/brick-titanium.png",
         icon_size = 32,
         subgroup = "angels-stone",
-        order = "i",
+        order = "k",
         stack_size = 1000,
         place_as_tile =
         {
