@@ -3,7 +3,9 @@ Version: 0.4.5
 Date: ????
   Changes:
     - Doubled the Tungsten carbide powder mixture output from 12 to 24 units, of the second tier of Tungsten cvarbide powder mixture recipe, and increased the processing time from 8 to 16 seconds to bring it into line with the first and third tier recipes; also added tier numerals
-    - Adjusted the recipe sort order for the third tier of Tungsten powder smelting, added tier numeral
+    - Adjusted the recipe sort order for the third tier of Tungsten powder smelting, added tier numeral; now properly sorted after second tier Tungsten powder smelting
+    - Adjusted item sort order for Titanium concrete brick; now properly sorted after reinforced concrete brick
+    - Added an input fluid port on induction furnaces, and moved the recipes for molten copper-tungsten from the chemical furnace to the induction furnace
   Bugfixes:
     - Fixed that the recipe for Zinc powder did not have ingredients; it is now properly crafted from 1 zinc ingot
 ---------------------------------------------------------------------------------------------------
